# faq-rag-chatbot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  PLAN.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
data/: faq_document.txt
docs/: CI.md  PRODUCTION_ROADMAP.md  flujo_datos.md  prompts.md  rag_decisions.md  rubric_checklist.md
outputs/: sample_queries.json
scripts/: simulate_ci_debug.sh
src/: build_index.py  config.py  constants.py  query.py
src/prompts/: __init__.py  answer_prompt.json  eval_prompt.json
src/utils/: __init__.py  chroma_client.py  llm_adapter.py  openai_client.py
tests/: conftest.py  test_build_index.py  test_query.py
